--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>ila aku ada bunga buat km!!</span>
+        <span>something for u!!</span>
     </div>
     <div class="button">
         <button>
