--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <span>L</span>
         <span>O</span>
     </div>
+    <div class="greetings">
+        <span>I</span>
+        <span>L</span>
+        <span>A</span>
+    </div>
     <div class="description">
         <span>something for u!!</span>
     </div>
